# OSDemandPaging

./: .gitignore  CMakeLists.txt  Makefile  args_handling.cpp  args_handling.h  demandpaging  main.cpp  main_functionality.cpp  main_functionality.h  page_functions.cpp  page_functions.h  page_node.cpp  page_node.h  page_table.cpp  page_table.h  vaddr_tracereader.h  wsclock_algorithm.cpp  wsclock_algorithm.h
helpers/: CMakeLists.txt
helpers/bit_operations/: CMakeLists.txt
helpers/bit_operations/include/: bit_operations.h
helpers/bit_operations/main/: main.cpp
helpers/bit_operations/src/: bit_operations.cpp
helpers/logging/: CMakeLists.txt
helpers/logging/main/: main.cpp
helpers/optional/: CMakeLists.txt
helpers/optional/include/: optional.h
helpers/optional/main/: main.cpp
helpers/vr_trace/: CMakeLists.txt
helpers/vr_trace/include/: vaddr_tracereader.h
helpers/vr_trace/main/: main.c  main.cpp
helpers/vr_trace/src/: vaddr_tracereader.c
main_functionality/: CMakeLists.txt
main_functionality/include/: args_handling.h  input_handling.h  main_functionality.h
main_functionality/main/: main.cpp
main_functionality/src/: args_handling.cpp  input_handling.cpp  main_functionality.cpp
page_replacement/: CMakeLists.txt
page_replacement/include/: circular_list.h  page_replacement.h  wsclock_algorithm.h
page_replacement/main/: main.cpp
page_replacement/src/: circular_list.cpp  page_replacement.cpp  wsclock_algorithm.cpp
page_table/: CMakeLists.txt
page_table/include/: page_functions.h  page_map.h  page_node.h  page_table.h
page_table/main/: main.cpp
page_table/src/: page_functions.cpp  page_map.cpp  page_node.cpp  page_table.cpp
